@@ -4,6 +4,8 @@ Changes in osmar version 1.1-2
   o A special thanks goes to Roger Bivand who is involved in most of
     the fixes and improvements in this version!
 
+  o Added inst/extdata/kaufstr.xml and an example in ?as_osmar.
+
   o Added muc.RData and removed \dontrun from most of the examples.
 
   o Introduced as_osmar_bbox generic and as_osmar_bbox.Spatial.
@@ -12,6 +14,7 @@ Changes in osmar version 1.1-2
     clashes with the sp package.
 
   o c.osmar/unique bug resolved (unique removes closed ways).
+
 
 Changes in osmar version 1.1-1
 
